--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "react": "16.13.1",
     "react-native": "0.63.0",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-image-placeholder": "^1.0.14",
     "react-native-reanimated": "^1.9.0",
-    "react-navigation": "^4.4.0"
+    "react-navigation": "^4.4.0",
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
